# chanpark-ML-2026

./: README.md  project1_포트폴리오.docx  pyproject.toml
ML/: 7.ipynb  ex04.ipynb  ex_01.ipynb  ex_02.ipynb  ex_05.ipynb  ex_06.ipynb  ex_08.ipynb  ex_09.ipynb  ex_10.ipynb  ex_11.ipynb  project1.ipynb  project3.ipynb
numpy/: ex_01.ipynb
