[project]
name = "chanpark-ml-2026"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "keras==3.15.0",
    "keras-nightly>=3.16.0.dev2026062605",
    "matplotlib==3.10.9",
    "numpy==2.4.5",
    "opencv-python==4.13.0.92",
    "pandas==3.0.3",
    "pandas-stubs~=3.0.3",
    "scikit-learn==1.9.0rc1",
    "seaborn==0.13.2",
    "tensorflow==2.21.0rc1",
]
